cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
#project( serial )
project( opencuda )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
include_directories( /home/lurz/final/EECS587TermProject )
#add_executable( serial serial.cpp )
add_executable( opencuda testopencuda.cpp)
#target_link_libraries( serial ${OpenCV_LIBS} )
target_link_libraries( opencuda ${OpenCV_LIBS} )
target_link_libraries( opencuda libtest )