cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)

project( pano )
find_package( OpenCV REQUIRED )
find_package(CUDA 8.0 REQUIRED)
include_directories( ${OpenCV_INCLUDE_DIRS} )
include_directories( ${CUDA_INCLUDE_DIRS} )
link_directories( /home/lurz/final/EECS587TermProject/p_code )
add_executable( pano panoramic.cpp stitch.h)
target_link_libraries( pano ${OpenCV_LIBS} )
target_link_libraries( pano LINK_PUBLIC mul )
target_link_libraries( pano ${CUDA_LIBRARIES} )